--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 <body>
     <div id="map" style="width: 100%; height: 100%;"></div>
 
-    <div style="float: left;">hello</div>
+    <div id="message" style="position:absolute;left: 50%;top:2%;background-color: aliceblue;padding: 10px;"></div>
+    <div id="msgTrack" style="position:absolute;left: 50%;top:6%;background-color: aliceblue;padding: 10px;"></div>
+    <div id="msgSupplement"
+        style="position:absolute;left: 5%;top:2%;background-color: aliceblue;padding: 10px;white-space: pre"></div>
 
     <form id="formType" onsubmit="return false"
         style="position: fixed;right: 50px;top: 20px;background-color: aliceblue;padding-right: 10px;">
@@ -32,6 +35,12 @@
         <input type="radio" name="type" value="slow">慢速移动点<br>
         <input type="radio" name="type" value="tempory">暂时停止点<br>
         <input type="submit" value="Submit">
+    </form>
+
+    <form id="formTrack" onsubmit="return false"
+        style="position: fixed;right: 50px;top: 220px;background-color: aliceblue;padding: 10px;">
+        <input type="text" name="track" placeholder="请输入想切换的track"><br>
+        <input type="submit" value="changeTrack">
     </form>
 
 </body>
@@ -47,12 +56,18 @@
     var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
     map.addLayer(layer);
 
+
     // 初始化数据, 并生成热力图和路线图
     var data
-    $.ajaxSetup({ async: false });
-    $.get("http://localhost:5000/data", function (res) {
-        data = res
-    })
+    function updateData() {
+        $.ajaxSetup({ async: false });
+        $.get("http://localhost:5000/data", function (res) {
+            data = res
+        })
+    }
+    updateData()
+
+
     makeHeatMap(data)
     makeLine(data)
 
@@ -61,7 +76,8 @@
 
     function makeHeatMap(data) {
         var latlngs = []
-        for (p of data) {
+
+        for (let p of data) {
             latlngs.push([p.lat, p.lng])
         }
 
@@ -107,19 +123,21 @@
         })
         var redIcon = new LeafIcon({
             iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png',
-            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png'
+            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+            // iconSize: [50, 82]
         })
         var blueIcon = new LeafIcon({
             iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-blue.png',
             shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png'
         })
 
+        // 显示一条轨迹上的GPS点, 生成一系列的marker
         var track = data.filter(val => val.trackID == trackID)
         for (let p of track) {
             var msg = 'index: ' + p.index.toString() + '\r' +
                 'lat: ' + p.lat.toString() + '\r' +
                 'lng: ' + p.lng.toString() + '\r' +
-                'datatime: ' + p.datatime + '\r' +
+                'datetime: ' + p.datatime + '\r' +
                 'type: ' + p.type + '\r'
 
             let markercolor
@@ -130,35 +148,111 @@
             } else if (p.index > index) {
                 marker = new L.Marker([p.lat, p.lng], { icon: blueIcon }).bindPopup(msg).openPopup()
             }
-
-
-            // 创建marker
-
             markers.push(marker)
+
         }
+
+        // 显示marker
         for (marker of markers) {
             map.addLayer(marker)
         }
     }
 
-    function marking() {
+    // 标注程序, 结果post回后台
+    function marking(trackID) {
         function* dataIter(data) {
             for (p of data) {
                 yield p
             }
         }
 
-        var dataI = dataIter(data)
+        var track = dataIter(data.filter(val => val.trackID == trackID))
         var trackID = 1
-        $('form').submit(function (event) {
-            var point = dataI.next().value
+        $('#formType').submit(function () {
+            var point = track.next().value
+            updateSupplementMessage(point.index - 1, point.index, point.index + 1)
             makeMarker(point.index, point.trackID)
-            point.type = $('form').serializeArray()[0].value
-            console.log(point)
+            point.type = $('#formType').serializeArray()[0].value
+
+            // 直接给点赋值，如果已经之前赋值过由后台给信息，但还是会赋值
+            $.post('http://localhost:5000/mark/point', point, function (res) {
+                document.getElementById("message").innerHTML = res.msg
+            })
+            // 重新从后台更新数据
+            updateData()
         })
     }
 
-    marking()
+    // 切换不同的轨迹, 由trackID决定
+    $('#formTrack').submit(function () {
+        var trackID = $('#formTrack').serializeArray()[0].value
+        var trackLength = data.filter(val => val.trackID == trackID).length
+        if (trackID != '') {
+            document.getElementById("msgTrack").innerHTML = 'on track ' + trackID.toString() + ' with ' + trackLength.toString() + ' points'
+            makeMarker(-1, trackID)
+            marking(trackID)
+        }
+    })
+
+    // 一些辅助参考信息
+    function updateSupplementMessage(pfi, pi, pai) {
+        let s1, s2, typef, typea
+
+        if (pfi < 0) {
+            s1 = 'first point'
+            typef = ''
+        } else {
+            s1 = getDistance(data[pfi].lat, data[pfi].lng, data[pi].lat, data[pi].lng) / getIntervelSecond(data[pfi], data[pi])
+            typef = data[pfi].type
+        }
+
+        if (data[pi].trackID != data[pai].trackID || data[pai] === undefined) {
+            s2 = 'last point on this track'
+            typea = ''
+        } else {
+            s2 = getDistance(data[pi].lat, data[pi].lng, data[pai].lat, data[pai].lng) / getIntervelSecond(data[pi], data[pai])
+            typea = data[pai].type
+        }
+
+        let msg = 'previous point(' + pfi + '): ' + typef + '<br>' +
+            '    interval speed: ' + s1.toString() + '<br>' +
+            'ready to mark: point(' + pi + '): ' + data[pi].type + '<br>' +
+            '    interval speed: ' + s2.toString() + '<br>' +
+            'next point(' + pai + '): ' + typea
+
+        document.getElementById("msgSupplement").innerHTML = msg
+    }
+
+    // 计算距离，参数分别为第一点的纬度，经度；第二点的纬度，经度 
+    function getDistance(lat1, lng1, lat2, lng2) {
+        var radLat1 = lat1 * Math.PI / 180.0;
+        var radLat2 = lat2 * Math.PI / 180.0;
+        var a = radLat1 - radLat2;
+        var b = lng1 * Math.PI / 180.0 - lng2 * Math.PI / 180.0;
+        var s = 2 * Math.asin(Math.sqrt(Math.pow(Math.sin(a / 2), 2) +
+            Math.cos(radLat1) * Math.cos(radLat2) * Math.pow(Math.sin(b / 2), 2)));
+        s = s * 6378.137; // EARTH_RADIUS 赤道半径
+        s = Math.round(s * 10000) / 10000; //  输出为KM
+        s = s * 1000
+        // s = s.toFixed(4); // 保留4位小数点
+        return s;
+    }
+
+    // 获取两点间的秒数差
+    function getIntervelSecond(p1, p2) {
+        datetime = p1.datetime.split(',')
+        date = datetime[0].split('-')
+        time = datetime[1].split(':')
+        d1 = new Date(date[0], date[1] - 1, date[2], time[0], time[1], time[2])
+
+        datetime = p2.datetime.split(',')
+        date = datetime[0].split('-')
+        time = datetime[1].split(':')
+        d2 = new Date(date[0], date[1] - 1, date[2], time[0], time[1], time[2])
+
+        intervel = (d2.getTime() - d1.getTime()) / 1000
+        return intervel
+    }
 
 </script>
 
